Adding jvm arguments to allow easier running from terminal